removed 5% of width to avoid overflow on x

--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,7 @@ body{
     width: 692px;
   }
   @media only screen and (max-width : 740px) {
-    width: 90%;
+    width: 85%;
   }
 }
 
